After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 621414 - Can't select file on file browser popup after choosing to sort by column "Modified"
Can't select file on file browser popup after choosing to sort by column "Mod...
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: GtkFileChooser
2.20.x
Other Linux
: Normal major
: ---
Assigned To: gtk-bugs
Federico Mena Quintero
: 623343 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2010-06-13 00:18 UTC by Nando
Modified: 2010-10-12 20:13 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Nando 2010-06-13 00:18:24 UTC
Found so far in Lucid 10.4 version.

To reproduce it:

1. Select an icon from the desktop.
2. Right click and select properties option.
3. Press current icon in order to choose a new icon.
4. Navigate to a folder containing several image files using the file browser popup that just showed up
5. Press the column "Modified" to sort the files by that type.
6. Try to select a file from the list and it's not possible, the selected file always remain the file that was previously selected before sorting by "Modified" column.

I've noticed and I can reproduce always this behavior while performing the steps above or as well while trying to select files to upload while using Firefox.

Note: If i after select another column to sort the files (Size or Name) it allows again to select a file.

$dpkg -l nautilus
ii nautilus 1:2.30.1-0ubuntu1 file manager and graphical shell for GNOME
Comment 1 Cosimo Cecchi 2010-06-13 17:44:43 UTC
-> GtkFileChooser
Comment 2 Matthias Clasen 2010-06-15 02:17:07 UTC
This was broken in commit 105e6fbc11dbc37a6b863b766b878cad1c63b969
Comment 3 Benjamin Otte (Company) 2010-06-16 10:52:37 UTC
commit a8e3ce6bb486a4c89799a77abe153d647fea1a69
Author: Benjamin Otte <otte@redhat.com>
Date:   Wed Jun 16 12:41:40 2010 +0200

    Can't select file on file browser after changing sort order
    
    The row values are 1-indexed not 0-indexed, this has to be taken into
    account when producing the new_order array.
Comment 4 David 2010-10-01 17:34:39 UTC
This bug persists in Lucid 10.4 and seems to have made it to Maverick 10.10
See https://bugs.launchpad.net/ubuntu/+source/gtk+2.0/+bug/592049
Comment 5 Benjamin Otte (Company) 2010-10-01 22:13:53 UTC
Yeah, seems it never made it into the 2.20 branch. It should be fixed in Maverick by now, it was filed when Maverick was still using way older versions.
Comment 6 Federico Mena Quintero 2010-10-12 20:13:43 UTC
*** Bug 623343 has been marked as a duplicate of this bug. ***